// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add sourcemap to import-as.tsx if NODE_ENV === 'production' 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from '@emotion/styled'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from '@emotion/styled';
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "ezbh3f00"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with autoLabel false 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from '@emotion/styled'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from '@emotion/styled';
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "ezbh3f00"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2ltcG9ydC1hcy50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBU2dCIiwiZmlsZSI6ImltcG9ydC1hcy50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0ICdzb21lcG9seWZpbGwnXG5pbXBvcnQgeyBkZWZhdWx0IGFzIGVtb3Rpb24gfSBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnXG5pbXBvcnQgUmVhY3RET00gZnJvbSAncmVhY3QtZG9tJ1xuXG5pbnRlcmZhY2UgUHJvcHMge1xuICBiYWNrZ3JvdW5kQ29sb3I6IHN0cmluZ1xufVxuXG5jb25zdCBXcmFwcGVyID0gZW1vdGlvbignZGl2JykoXG4gIHtcbiAgICBjb2xvcjogJ3JlZCcsXG4gIH0sXG4gIChwcm9wczogUHJvcHMpID0+ICh7XG4gICAgYmFja2dyb3VuZENvbG9yOiBwcm9wcy5iYWNrZ3JvdW5kQ29sb3IsXG4gIH0pLFxuKVxuXG5leHBvcnQgY2xhc3MgU2ltcGxlQ29tcG9uZW50IGV4dGVuZHMgUmVhY3QuUHVyZUNvbXBvbmVudCB7XG4gIHJlbmRlcigpIHtcbiAgICByZXR1cm4gKFxuICAgICAgPFdyYXBwZXIgYmFja2dyb3VuZENvbG9yPVwiYmx1ZVwiPlxuICAgICAgICA8c3Bhbj5oZWxsbzwvc3Bhbj5cbiAgICAgIDwvV3JhcHBlcj5cbiAgICApXG4gIH1cbn1cblxuUmVhY3RET00ucmVuZGVyKDxTaW1wbGVDb21wb25lbnQgLz4sIGRvY3VtZW50LnF1ZXJ5U2VsZWN0b3IoJyNhcHAnKSlcbiJdfQ== */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with default configs 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from '@emotion/styled'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from '@emotion/styled';
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "ezbh3f00"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;", "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2ltcG9ydC1hcy50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBU2dCIiwiZmlsZSI6ImltcG9ydC1hcy50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0ICdzb21lcG9seWZpbGwnXG5pbXBvcnQgeyBkZWZhdWx0IGFzIGVtb3Rpb24gfSBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnXG5pbXBvcnQgUmVhY3RET00gZnJvbSAncmVhY3QtZG9tJ1xuXG5pbnRlcmZhY2UgUHJvcHMge1xuICBiYWNrZ3JvdW5kQ29sb3I6IHN0cmluZ1xufVxuXG5jb25zdCBXcmFwcGVyID0gZW1vdGlvbignZGl2JykoXG4gIHtcbiAgICBjb2xvcjogJ3JlZCcsXG4gIH0sXG4gIChwcm9wczogUHJvcHMpID0+ICh7XG4gICAgYmFja2dyb3VuZENvbG9yOiBwcm9wcy5iYWNrZ3JvdW5kQ29sb3IsXG4gIH0pLFxuKVxuXG5leHBvcnQgY2xhc3MgU2ltcGxlQ29tcG9uZW50IGV4dGVuZHMgUmVhY3QuUHVyZUNvbXBvbmVudCB7XG4gIHJlbmRlcigpIHtcbiAgICByZXR1cm4gKFxuICAgICAgPFdyYXBwZXIgYmFja2dyb3VuZENvbG9yPVwiYmx1ZVwiPlxuICAgICAgICA8c3Bhbj5oZWxsbzwvc3Bhbj5cbiAgICAgIDwvV3JhcHBlcj5cbiAgICApXG4gIH1cbn1cblxuUmVhY3RET00ucmVuZGVyKDxTaW1wbGVDb21wb25lbnQgLz4sIGRvY3VtZW50LnF1ZXJ5U2VsZWN0b3IoJyNhcHAnKSlcbiJdfQ== */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-as.tsx with sourcemap false 1`] = `

File: import-as.tsx
TypeScript before transform:
  import 'somepolyfill'
  import { default as emotion } from '@emotion/styled'
  import React from 'react'
  import ReactDOM from 'react-dom'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import 'somepolyfill';
  import { default as emotion } from '@emotion/styled';
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion('div', {
    target: "ezbh3f00"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;
